Add vote and review + swagger doc
