# models/Review.js
@@ -1,0 +1,31 @@
+const mongoose = require("mongoose");
+
+const Review = mongoose.model("Review", {
+  title: {
+    type: String,
+    required: true,
+  },
+  text: {
+    type: String,
+    required: true,
+  },
+  date: {
+    type: Date,
+  },
+  game_id: {
+    type: String,
+    required: true,
+  },
+  author: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: "User",
+  },
+  votes: [
+    {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "Vote",
+    },
+  ],
+});
+
+module.exports = Review;
