# routes/game_platforms.js
@@ -5,6 +5,10 @@ const axios = require("../config/api-axios");
 // Get Platforms
 router.get("/platforms", async (req, res) => {
   try {
+    // #swagger.tags = ['Game']
+    // #swagger.summary = 'Get a list of game platforms'
+    // #swagger.description = 'Get a list of video game platforms'
+
     let url = `/platforms?key=${process.env.API_KEY}`;
 
     const response = await axios.get(url);
