# routes/game_types.js
@@ -5,6 +5,10 @@ const axios = require("../config/api-axios");
 // Get types
 router.get("/genres", async (req, res) => {
   try {
+    // #swagger.tags = ['Game']
+    // #swagger.summary = 'Get a list of game genres.'
+    // #swagger.description = 'Get a list of video game genres.'
+
     let url = `/genres?key=${process.env.API_KEY}`;
 
     const response = await axios.get(url);
